# admin-backend

./: .coveragerc  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTION.md  Pipfile  Procfile  README.md  cron.json  crowdin.yml  manage.py  pyproject.toml  release-tasks.sh  requirements.txt  setup.cfg  test.txt
.circleci/: config.yml
.github/: CHANGELOG_fr.md  CONTRIBUTING_fr.md  README_fr.md  automerge.yml  test_backend.yml
.github/workflows/: automerge.yml  cron.yml  cron_aggregate_stats.yml  cron_export_contributions_to_notion.yaml  cron_export_data_to_github.yaml  cron_export_stats_to_github.yaml  cron_import_questions_from_notion.yaml  release-please.yml  test_backend.yml  test_frontend.yml
activity/: admin.py  factories.py  models.py  tests.py  utilities.py
activity/migrations/: 0001_initial.py  0002_alter_event_created_alter_event_event_object_type.py  0003_event_model_translate.py  0004_alter_event_actor_id_object_id_allow_null.py  0005_alter_event_event_object_type_monthly_agg_stat.py
api/: admin.py  constants.py  filters.py  models.py  permissions.py  serializers.py  tests.py  urls.py  utilities.py  utilities_github.py  utilities_notion.py  utilities_sendinblue.py  utilities_stats.py  views.py
api/categories/: views.py
api/contributions/: serializers.py  tests.py  views.py
api/data/: aide.yaml  categories.yaml  questions.yaml  quizzes.yaml  tags.yaml
api/glossary/: filters.py  serializers.py  tests.py  views.py
api/migrations/: 0001_create_model_question.py  0002_auto_20200308_1724.py  0003_question_author.py  0004_question_publish.py  0005_create_model_questionstat.py  0006_question_answer_image.py  0007_create_model_contribution.py  0008_update_question_link_fields.py  0009_auto_20200402_1843.py  0010_auto_20200405_1131.py  0011_create_model_category.py  0012_question_category_temp.py  0013_remove_question_category.py  0014_rename_question_category.py  0015_auto_20200409_1828.py  0016_auto_20200412_1732.py  0017_quiz_author.py  0018_create_model_quizstat.py  0019_questionstat_source.py  0020_auto_20200417_0951.py  0021_quiz_publish.py  0023_question_validation_status.py  0025_auto_20200425_2030.py  0026_contribution_type.py  0028_auto_20200505_0817.py  0031_create_model_dailystat.py  0032_auto_20200523_1916.py  0033_auto_20200523_2335.py  0036_improve_model_stats.py  0037_create_model_glossary.py  0037_question_hint.py  0038_question_hint.py  0042_cleanup_question_quiz_stats.py  0044_quiz_tags.py  0045_auto_20200806_1648.py  0048_question_additional_answer_choices.py  0049_question_fields_blank.py  0051_update_django_jsonfield.py  0052_auto_20201119_1244.py  0053_quiz_difficulty_average.py  (+19 more)
api/questions/: aide.yaml  empty.yaml  filters.py  questions.yaml  serializers.py  test.yaml  tests.py  views.py
api/quizs/: filters.py  serializers.py  test_quiz_api.py  tests.py  views.py
api/tags/: serializers.py  views.py
api/templates/: notion_questions.html  stats_dashboard.html
api/templatetags/: custom_filters.py  isinstance.py
api/tests/: factories.py  test_api.py  test_api_stats.py  test_command_cleanup_app_stats.py  test_command_cleanup_question_stats.py  test_command_generate_daily_stats.py  test_command_reset_question_stats.py  test_fixtures.py  (+4 more)
app/: asgi.py  settings.py  urls.py  views.py  wsgi.py
backend/: .env.example  .gitignore  Pipfile  pyproject.toml  release-tasks.sh  requirements.txt  setup.cfg
categories/: admin.py  forms.py  models.py  tables.py
contributions/: admin.py  factories.py  filters.py  forms.py  models.py  tables.py  tests.py
core/: admin.py  constants.py  fields.py  forms.py  mixins.py  models.py  tables.py
data/: authors.yaml  categories.yaml  configuration.yaml  difficulty-levels.yaml  glossary.yaml  languages.yaml  question_aide.yaml  questions.yaml  quiz-questions.yaml  quiz-relationships.yaml  quiz-stats.yaml  quizs.yaml  quizzes.yaml  ressources-autres-apps.yaml  ressources-glossaire.yaml  ressources-soutiens.yaml  schema-questions.json  stats.yaml  tags.yaml
frontend/: .env  .env.example  .eslintrc.yaml  .gitignore  _redirects  package-lock.json  package.json  vue.config.js
glossary/: admin.py  factories.py  filters.py  forms.py  models.py  tables.py
history/: models.py  tables.py  utilities.py
questions/: admin.py  factories.py  filters.py  forms.py  import_ods.html  import_ods_doc.html  list.html  models.py  tables.py  tests.py
quizs/: admin.py  factories.py  filters.py  forms.py  models.py  tables.py  tests.py
stats/: admin.py  constants.py  models.py  serializers.py  tables.py  urls.py  utilities.py  views.py
tags/: admin.py  filters.py  models.py  tables.py
templates/: 403.html  404.html  500.html
users/: admin.py  constants.py  factories.py  filters.py  forms.py  models.py  tables.py  tests.py
(+776 files in other folders)
