[project]
name = "quiz-anthropocene-admin-backend"
version = "1.0.0"
description = "Admin backend for Anthropocene Quiz"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.26.43",
    "django==4.2.9",
    "asgiref>=3.6.0",
    "certifi>=2022.12.7",
    "dj-database-url>=1.2.0",
    "django-anymail[sendinblue]~=10.1",
    "django-autocomplete-light~=3.9.7",
    "django-bootstrap5~=23.3",
    "django-ckeditor~=6.7.0",
    "django-cors-headers~=4.2.0",
    "django-debug-toolbar",
    "django-extensions~=3.2.3",
    "django-fieldsets-with-inlines~=0.6",
    "django-filter~=23.3",
    "django-import-export~=3.3.1",
    "django-simple-history~=3.4.0",
    "django-tables2~=2.6.0",
    "djangorestframework~=3.14.0",
    "django-solo~=2.1.0",
    "drf-spectacular~=0.26.5",
    "gunicorn>=20.0.1",
    "ipython>=8.8.0",
    "pandas>=1.5.2",
    "pillow>=9.4.0",
    "psycopg2-binary~=2.9.7",
    "PyGithub>=1.57",
    "python-dotenv~=1.0.0",
    "pytz>=2022.7",
    "PyYAML>=6.0",
    "sentry-sdk~=1.31.0",
    "sqlparse>=0.4.3",
    "whitenoise>=6.3.0",
]

[project.optional-dependencies]
dev = [
    "coverage",
    "factory-boy",
    "freezegun",
    "pre-commit",
    "ruff",
]

[tool.ruff]
line-length = 119
target-version = "py39"
exclude = [".git", "*migrations*", ".venv", "venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"**/migrations/**" = ["E501", "F401"]
"app/settings.py" = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
lines-after-imports = 2
force-wrap-aliases = true
